--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "nipa",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server"
+    "dev": "nodemon server",
+    "start" : "node server.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,5 +17,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "validate-phone-number-node-js": "^0.0.1"
+  },
+  "engines": {
+    "node": "14.16.0"
   }
 }
